--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Hello</title>
 </head>
 <body>
-    <h2>Hello World</h2>
+    <h2><div style="color: #2d6f75">Hello World</div></h2>
 </body>
 </html>
